# crisismind-ai

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/agents/: base.py  graph.py  infrastructure_agent.py  news_agent.py  orchestrator_agent.py  prediction_agent.py  recommendation_agent.py  weather_agent.py
backend/app/api/v1/endpoints/: explanations.py  health.py  risk.py  simulation.py  weather.py
backend/app/api/v1/schemas/: request.py  response.py
backend/app/core/: __init__.py  constants.py  exceptions.py  logging.py
backend/app/models/database/: __init__.py  base.py
backend/app/models/ml/: flood_risk_model.py  heatwave_risk_model.py  outage_risk_model.py
backend/app/services/: gemini_service.py  infrastructure_service.py  news_service.py  risk_service.py  simulation_service.py  weather_service.py
backend/app/utils/: formatters.py  helpers.py  validators.py
deployment/: docker-compose.prod.yml  nginx.conf
